Added proper communication between popup and content scripts

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,9 @@
     <title>Setting</title>
 </head>
 <body>
+    <h1>Test</h1>
     <button id="btn">Blue?</button>
-    <script src="dynamicSet.js"></script>
+    <button id="btn2">White?</button>
+    <script type="text/javascript"  src="dynamicSet.js"></script>
 </body>
 </html>
