Changed buttons for dropdown with colour options

--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Setting</title>
-</head>
-<body>
-    <h1>Test</h1>
-    <button id="btn">Blue?</button>
-    <button id="btn2">White?</button>
-    <script type="text/javascript"  src="dynamicSet.js"></script>
-</body>
+  </head>
+  <body>
+    <h1>Settings</h1>
+    <label for="colour">Choose background colour:</label>
+    <select name="colour" id="oolour">
+      <option value="#FFFFFF">White</option>
+      <option value="#8dbeffb0">Light Blue</option>
+      <option value="#6495ED">Blue</option>
+      <option value="#000000">Black</option>
+    </select>
+    <script type="text/javascript" src="dynamicSet.js"></script>
+  </body>
 </html>
