Added comments and colour picker

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,11 @@
       <option value="#8dbeffb0">Light Blue</option>
       <option value="#6495ED">Blue</option>
       <option value="#000000">Black</option>
+      <option value="other">Other</option>
     </select>
+    <div id="colour-div" hidden="true">
+      <input type="color" id="colourPicker">
+    </div>
     <script type="text/javascript" src="dynamicSet.js"></script>
   </body>
 </html>
